# SynDBB

./: .gitignore  LICENSE.md  README.md  SCREENSHOTS.md  TODO.txt  config.json.example  geany.project  install.sh  requirements.txt  run.sh  setup.cfg  uwsgi.sh
DATABASE/: d2k5-com-ldap.ldif  d2k5-com-slapd.conf  db-upgrade-0.sql  db-upgrade-1.sql  db-upgrade-2.sql  db-upgrade-3.sql  db-upgrade-4.sql  db-upgrade-5.sql  db-upgrade-6.sql
extras/: 4chan-poster.py  rss-poster.py  user-creator.py
syndbb/: __init__.py  initialize.py  syndbb.db
syndbb/models/: activity.py  bbcode.py  channels.py  currency.py  d2_hash.py  forums.py  get_emote.py  invites.py  paste.py  quotedb.py  time.py  users.py  version.py
syndbb/static/: robots.txt
syndbb/templates/: admin.html  admin_ban.html  admin_channels.html  admin_emoticons.html  admin_invites.html  admin_logins.html  admin_password.html  admin_quotes.html  admin_rank.html  admin_users.html  ban_list.html  banlist.html  bash-upload.sh  change_avatar.html  change_password.html  chat-rules.html  chat.html  chat_header.html  chat_integrated.html  chat_matrix.html  configure_avatar.html  configure_flair.html  custom_forums.html  discord.html  edit_post.html  emoticons.html  error_already_logged_in.html  error_insufficient_permissions.html  error_not_logged_in.html  events.html  home.html  info.html  invalid.html  invites.html  layout.html  login.html  login_info.html  new_thread.html  pastebin.html  post_feed.xml  (+34 more)
syndbb/views/: __init__.py  admin.py  api.py  auth.py  basic.py  channels.py  emoticons.py  events.py  forums.py  (+9 more)
(+52 files in other folders)
