[metadata]
name = syndbb
author = faggqt
author-email = faggqt@d2k5.com
summary = d2k5 sux
license = QPL-1.0
description-file =
  README.md
home-page = https://faggqt.pw
requires-python = >=3.4
classifier =
  Development Status :: Rolling Release
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved :: Q Public License 1.0
  Operating System :: OS Independent
  Programming Language :: Python

[files]
packages =
  syndbb
data_files =
  templates = templates/*
  static = static/*
