[metadata]
name = syndbb
author = unendingPattern
author-email = kei.trei.a52@gmail.com
summary = Imageboard/forum hybrid
license = QPL-1.0
description-file =
  README.md
home-page = https://kei.info.gf
requires-python = >=3.4
classifier =
  Development Status :: Rolling Release
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved :: Q Public License 1.0
  Operating System :: OS Independent
  Programming Language :: Python

[files]
packages =
  syndbb
data_files =
  templates = templates/*
  static = static/*
